--- a/unreal-project/Config/DefaultEditor.ini
+++ b/unreal-project/Config/DefaultEditor.ini
@@ -10,3 +10,5 @@ bBlueprintIsNotBlueprintType = true
 [/Script/UnrealEd.EditorProjectAppearanceSettings]
 bDisplayUnitsOnComponentTransforms = True
 
+[/Script/AdvancedPreviewScene.SharedProfiles]
+
